--- a/research.html
+++ b/research.html
@@ -53,6 +53,15 @@ I have also done statistical analyses involving structural equation modeling (S
 
 <ul>
 <li>
+<a href="https://arxiv.org/abs/2411.09976">Occupation times on the legs of a diffusion spider</a> (2024), with P. Salminen. Preprint, <tt>arXiv:2411.09976 [math.PR]</tt>. 
+<a onclick="ShowAndHide('abst-spider')"> [Abstract] </a>
+
+<div id="abst-spider" class="hiddenbox">
+We study the joint moments of occupation times on the legs of a diffusion spider. Specifically, we give a recursive formula for the Laplace transform of the joint moments, which extends earlier results for a one-dimensional diffusion. For a Bessel spider, of which the Brownian spider is a special case, our approach yields an explicit formula for the joint moments of the occupation times.
+</div>
+</li>
+  
+<li>
 <a href="https://doi.org/10.3390/antibiotics12061022">Do patients’ psychosocial characteristics impact antibiotic prescription rates?</a> (2023), with S. Stenlund, L. Mâsse, L. Sillanmäki, K. C. Appelt, H. Koivumaa-Honkanen, P. Rautava, S. Suominen, and D. M. Patrick. <i>Antibiotics</i> <b>12</b>(6), 1022. 
 <a onclick="ShowAndHide('abst-antibiotic')"> [Abstract] </a>
 
