--- a/research.html
+++ b/research.html
@@ -53,7 +53,7 @@ I have also done statistical analyses involving structural equation modeling (S
 
 <ul>
 <li>
-<a href="https://arxiv.org/abs/2411.09976">Occupation times on the legs of a diffusion spider</a> (2024), with P. Salminen. Preprint, <tt>arXiv:2411.09976 [math.PR]</tt>. 
+<a href="https://arxiv.org/abs/2411.09976">Occupation times on the legs of a diffusion spider</a> (2024), with P. Salminen. Preprint, arXiv:2411.09976 [math.PR]. 
 <a onclick="ShowAndHide('abst-spider')"> [Abstract] </a>
 
 <div id="abst-spider" class="hiddenbox">
