--- a/teaching-sample.html
+++ b/teaching-sample.html
@@ -33,7 +33,7 @@
 <h1 style="text-align: center"> Sample course material </h1>
 
 <p>
-The material below provides a snapshot from the course MATH 307 &ndash; Applied Linear Algebra, which I have taught a total of four times at UBC during 2021&ndash;2023. 
+The material below provides a snapshot from a lecture in the course MATH 307 &ndash; Applied Linear Algebra, which I have taught a total of four times at UBC during 2021&ndash;2023. 
 </p>
 
 <h3> 1. Sample lecture plan</h3>
@@ -49,16 +49,18 @@ It seems that your browser does not support the video tag.
 </video>
 
 <p> 
-This is a video recording of part of the lecture (ca. 10 min), including a demonstration of filtering out certain frequencies from a digital sound recording.  </p>
+This is a video recording of part of the lecture (ca. 10 min), including a demonstration of filtering out certain frequencies from a digital sound recording.
+The video file is compressed due to limits on file size. </p>
 
 <h3> 3. Lecture notes</h3>
 
-<p> The <a href="files/math307-lecture-notes.pdf">lecture notes</a> are always scanned and uploaded to the course webpage after the lecture. In this case, the final page was rather hastily sketched during the lecture, and therefore I rewrote that page a bit neater before scanning the notes. 
+<p> The <a href="files/math307-lecture-notes.pdf">lecture notes</a> are always scanned and uploaded to the course webpage after the lecture. 
+In this case, the final page was rather hastily sketched during the lecture, and therefore I rewrote that page a bit neater before scanning the notes. 
 </p>
 
 <h3> 4. Python example</h3>
 
-<p> A <a href="files/jupyter/DFT-print.pdf">Jupyter notebook</a> was used during the lecture to illustrate how to compute the DFT using Python. 
+<p> A <a href="files/jupyter/DFT-print.pdf">Jupyter notebook</a> was used during the lecture to illustrate how to compute and modify the DFT using Python. 
 </p>
 
 
