--- a/cv.html
+++ b/cv.html
@@ -36,8 +36,8 @@
 
   <div class="textcolumn">
     <h1 style="text-align: center"> Curriculum vitae </h1>
-    <p> A copy of my CV can be found <a href="files/stenlund-david-cv-2023-11.pdf">here</a>. </p>
-    <p> I am currently a postdoctoral fellow at the University of British Columbia (Vancouver, Canada). I received my Ph.D. from Åbo Akademi University (Turku, Finland) in 2020 under the supervision of P. Salminen. </p>
+    <p> A copy of my CV can be found <a href="files/stenlund-david-cv-2024-11.pdf">here</a>. </p>
+    <p> I have been a postdoctoral fellow at the University of British Columbia (Vancouver, Canada). I received my Ph.D. from Åbo Akademi University (Turku, Finland) in 2020 under the supervision of P. Salminen. </p>
     <p> A short summary of my bio is given below. </p>
   </div>
 </div>
