--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 Postdoctoral Researcher in Mathematics <br>
 <br>
 
-Email:  <a href="mailto:stenlund@math.ubc.ca">stenlund@math.ubc.ca</a>
+Email:  <a href="mailto:david.stenlund@utu.fi">david.stenlund@utu.fi</a>
     </p>
   </div>
 </div>
