--- a/research.html
+++ b/research.html
@@ -53,7 +53,8 @@ I have also done statistical analyses involving structural equation modeling (S
 
 <ul>
 <li>
-<a href="https://arxiv.org/abs/2411.09976">Occupation times on the legs of a diffusion spider</a> (2024), with P. Salminen. Preprint, arXiv:2411.09976 [math.PR]. 
+<a href="https://doi.org/10.3390/e27020179">Occupation times on the legs of a diffusion spider</a> (2025), with P. Salminen. 
+<i>Entropy</i> <b>27</b>(2): 179. 
 <a onclick="ShowAndHide('abst-spider')"> [Abstract] </a>
 
 <div id="abst-spider" class="hiddenbox">
