--- a/index.html
+++ b/index.html
@@ -37,10 +37,13 @@
   <div class="textcolumn">
     <h1 style="text-align: center"> David Stenlund </h1>
     <p> 
-Postdoctoral Researcher in Mathematics <br>
-<br>
-
-Email:  <a href="mailto:david.stenlund@utu.fi">david.stenlund@utu.fi</a>
+      Adjunct Faculty <br>
+      Emmanuel College (Boston, MA) <br>
+      <a href="mailto:stenlundd@emmanuel.edu">stenlundd@emmanuel.edu</a> <br>
+      <hr>
+      Visiting Researcher <br>
+      University of Turku (Turku, Finland) <br>
+      <a href="mailto:david.stenlund@utu.fi">david.stenlund@utu.fi</a>
     </p>
   </div>
 </div>
