--- a/teaching.html
+++ b/teaching.html
@@ -40,7 +40,7 @@
 I have been teaching and assisting in university courses since the later part of my undergraduate studies. I enjoy helping others discover more about mathematics, as I find it a fascinating subject myself. Below is a list of university courses that I have taught over the past years. 
     </p>
     <p>
-The UBC courses have their own Canvas webpages (only accessible to registered students). Course material such as syllabus outline and lecture notes may, however, be available upon request. 
+Course webpages are only accessible to registered students. Course material such as syllabus outline and lecture notes may, however, be available upon request. 
     </p>
   </div>
 </div>
@@ -51,6 +51,7 @@ The UBC courses have their own Canvas webpages (only accessible to registered st
 Below are a few Jupyter notebooks that I have prepared for demonstrations in class during MATH 307 (Applied Linear Algebra) at UBC. Click on the title to view a PDF version of the notebook. 
 </p>
 
+<ul>
 <li> <a href="files/jupyter/fitting-models-print.pdf">Fitting models to data</a>
 (Download the <a href="files/jupyter/fitting-models.ipynb" download="fitting-models.ipynb">notebook</a>)
 </li> 
@@ -63,10 +64,16 @@ Below are a few Jupyter notebooks that I have prepared for demonstrations in cla
 <li> <a href="files/jupyter/computing-eigenvalues-print.pdf">Computing eigenvalues</a>
 (Download the <a href="files/jupyter/computing-eigenvalues.ipynb" download="computing-eigenvalues.ipynb"> notebook </a>)
 </li> 
+</ul>
 
 <br>
 
 <h3>Course Instructor</h3>
+
+<h4>Emmanuel College</h4>
+<ul>
+<li> <a href="https://eclearn.emmanuel.edu/courses/7669199">MATH 1101 – College Algebra</a>  (Fall 2025) </li> 
+</ul>
 
 <h4>University of British Columbia</h4>
 <ul>
