--- a/cv.html
+++ b/cv.html
@@ -54,6 +54,8 @@
 <h3>University Appointments</h3>
 
 <ul>
+<li> Adjunct Faculty, Emmanuel College, Boston (Fall 2025) </li> 
+<li> Affiliated Researcher, University of Turku, Finland (2025–) </li> 
 <li> Postdoctoral Research and Teaching Fellow, University of British Columbia, Vancouver (2021–2024) </li> 
 <li> Postdoctoral Researcher, Åbo Akademi University, Finland (2020–2021) </li> 
 <li> University Teacher, Åbo Akademi University, Finland (Spring 2020) </li> 
