--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       Emmanuel College (Boston, MA) <br>
       <a href="mailto:stenlundd@emmanuel.edu">stenlundd@emmanuel.edu</a> <br>
       <hr>
-      Visiting Researcher <br>
+      Affiliated Researcher <br>
       University of Turku (Turku, Finland) <br>
       <a href="mailto:david.stenlund@utu.fi">david.stenlund@utu.fi</a>
     </p>
