--- a/resources.html
+++ b/resources.html
@@ -45,6 +45,8 @@
 
     <h3 style="text-align: center"> Links </h3>
     <p> 
+      <a href="https://www.emmanuel.edu">Emmanuel College</a>
+      <br><br>
       <a href="https://www.math.ubc.ca">UBC Department of Mathematics</a>
       <br><br>
       <a href="https://secure.math.ubc.ca/Links/Probability/">UBC Probability</a>
